finished bare minimum lulz

--- a/static/index.html
+++ b/static/index.html
@@ -8,18 +8,18 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Scott Klemmer</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Seth Choi</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Scott is an Associate Professor of Cognitive Science and Computer Science & Engineering at UC San Diego, where he is a co-founder and Associate Director of the Design Lab. He previously served as Associate Professor of Computer Science at Stanford, where he co-directed the HCI Group, held the Bredt Faculty Scholar chair, and was a founding participant in the d.school. </p>
+	<p>Seth is currently a student of Computer Science at UCSD and is taking COGS 120 / CSE 170. Well, he's waitlisted. After graduation, he has a job lined up to do front end engineering for a local startup that focuses on crowdfunding for nonprofits.</p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
+		<li>CacheIT banking</li>
+		<li>KALite</li>
 		<li>Prototyping</li>
-		<li>...</li>
+		<li>Curation of dank memes</li>
 	</ol>
 </body>
 </html>
